--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -1,4 +1,4 @@
-/*Arregla estos estilos en cuanto termines, por el amor de dios*/
+/*Arregla estos estilos en cuanto termines*/
 div {
     padding: 2rem;
     margin-bottom: 2rem;
