--- a/pages/Home/Home.css
+++ b/pages/Home/Home.css
@@ -9,7 +9,7 @@
     color: rgba(61, 163, 197, 0.721);
     transition: 0.5s ease-in-out;
     height: 5rem;
-    font-size: 50px;
+    font-size: 70px;
     margin-left: 10px;
 }
 
@@ -34,6 +34,6 @@
     transform: scale(1.1);
 }
 
-img{
+.hub img{
     max-width: 150px;
 }
