--- a/pages/Pokemon/Pokemon.css
+++ b/pages/Pokemon/Pokemon.css
@@ -14,38 +14,49 @@ section{
 }
 
 section > h1{
-    color: rgba(61, 163, 197, 0.721);
+    color: black;
     font-size: 40px;
     transition: 0.5s ease-in-out;
     margin-left: 10px;
 }
 
 #card{
-    background: linear-gradient(150deg, rgb(80, 183, 80) 40%, whitesmoke 40%);
+    background: linear-gradient(160deg, rgb(80, 183, 80) 40%, whitesmoke 40%);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
     margin-right: 20px;
-    position: relative;
-    width: 360px;
-    height: 500px;
+    align-items: center;
+    width: 300px;
+    height: 490px;
     box-shadow: 1px 1px 33px -12px rgba(69,69,69,1);
     border-radius: 10px;
+    transition: .5s ease;   
+}
+
+#card:hover{
+    transform: scale(1.03);
+    transition: .5s ease;
 }
 #card h2{
     color: black;
-    position: relative;
-    height: 200px;
-    width: auto;
-    margin:auto;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 #card img{
-    border-radius: 60px;
-    width: 500px;
-    height: 250px;
-    position: relative;
-    margin: 30px auto;
+    display: block;
+    width: 180px;
+    max-height: 200px;
+}
+
+#type{
+    display: flex;
+    align-items: center;
+    padding: 0px;
+}
+#type img{
+    opacity: 80%;
+    width: 18px;
+    height: 18px;
 }
 
