--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -1,3 +1,9 @@
 footer{
-    height: 10vh;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+}
+
+footer p{
+    font-size: 12px;
 }
